# TimerErTim

./: .gitignore  404.html  CNAME  COPYRIGHT.md  README.md  README.typ  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  feed.xml  index.html  index.txt  lib.typ  manifest.webmanifest  mise.toml  robots.txt  sitemap.xml
.github/workflows/: main.yaml  website.yaml
.jj/working_copy/: checkout  tree_state
404/: index.html
_next/static/-_U6Iey-VbFrvLyUjkSdb/: _ssgManifest.js
_next/static/CCLxF5zQpp_GraqIYgvjU/: _ssgManifest.js
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html  index.txt
about/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.about.__PAGE__.txt  __next.about.txt  index.html  index.txt
assets/banners/: github.typ  mise.toml  social-preview.typ  youtube.typ
assets/favicon/: favicon.typ  mise.toml  site.webmanifest
blog/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.blog.__PAGE__.txt  __next.blog.txt  index.html  index.txt
blog/2026-blog-with-typst/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.blog.$d$blog-name.__PAGE__.txt  __next.blog.$d$blog-name.txt  __next.blog.txt  index.html  index.txt
blog/2026-fh-talk-about-typst/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.blog.$d$blog-name.__PAGE__.txt  __next.blog.$d$blog-name.txt  __next.blog.txt  index.html  index.txt
blog/2026-typst-talk/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.blog.$d$blog-name.__PAGE__.txt  __next.blog.$d$blog-name.txt  __next.blog.txt  index.html  index.txt
blogs/: mise.toml
blogs/2026-blog-with-typst/: deps.typ  main.typ
blogs/2026-fh-talk-about-typst/: deps.typ  main.typ  mise.toml
blogs/2026-typst-talk/: main.typ  mise.toml
blogs/common/: base-style.typ  deps.typ  pdf-style.typ  template.typ  theming.typ  variants.typ  web-style.typ
blogs/common/mods/: conch.typ
blogs/tasks/: blog.toml  export.toml
config/: values.json
cv/: .gitignore  biodata.typ  common.typ  cv.typ  mise.toml  settings.yaml
cv/letters/: template.typ
cv/src/: en.yaml
docs/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.docs.__PAGE__.txt  index.html  index.txt
docs/sketch/: blog-website-embedding.rnote
libs/concat-brotli/: package.json
libs/xdelta3/: .gitignore  Cargo.toml  README.md  mise.toml  pyproject.toml
libs/xdelta3/src/: lib.rs
libs/xdelta3/tests/: test_roundtrip.py
logo/: banner.typ  icon.typ  mise.toml  subtitled.typ  youtube.typ
look-and-feel/: colors.typ  export.typ  fonts.typ  heroui.json  index.typ  layout.typ  mise.toml  theme.typ  themes.json
pricing/: __next._full.txt  __next._tree.txt  __next.pricing.__PAGE__.txt  __next.pricing.txt  index.html  index.txt
processing/compile-typst/: Cargo.toml
processing/github-readme-stats/: generate_images.py  github_stats.py
processing/snk/: CREDIT.md
profile-readme/: README.typ  lib.typ  mise.toml
profile-readme/processing/compile-typst/: Cargo.toml
profile-readme/processing/compile-typst/reflexo-vec2svg/: README.md
profile-readme/processing/compile-typst/reflexo-vec2svg/src/backend/: mod.rs
profile-readme/processing/compile-typst/reflexo-vec2svg/src/frontend/: context.rs  mod.rs
profile-readme/processing/compile-typst/reflexo-vec2svg/src/transform/: minify.rs
profile-readme/processing/compile-typst/src/: main.rs
website/: .gitignore  look-and-feel.json  mise.toml  next.config.mjs  package-lock.json  package.json  tsconfig.json
website/components/: typst-document.tsx
website/libs/brotli-wasm/: Cargo.toml
website/libs/brotli-wasm/src/: lib.rs
website/model/: blogs.ts
website/scripts/: generate-theme-css.mjs  setup-typst-renderer-deps.mjs  test-brotli-wasm.ts
website/src/: paths.ts
website/tasks/: blog.toml
website/types/: brotli-compress-js.d.ts
(+236 files in other folders)
