[package]
name = "xdelta3-py"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Python bindings for the xdelta3 VCDIFF library"
repository = "https://github.com/timerertim/timerertim"

[lib]
name = "xdelta3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
xdelta3 = "0.1.5"
