[package]
name = "brotli-dict-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Minimal Brotli decompressor with custom dictionary support for browsers"

[lib]
crate-type = ["cdylib"]

[dependencies]
brotlic-sys = "0.2"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]
